--- a/gowri first pipeline/jenkinsfile
+++ b/gowri first pipeline/jenkinsfile
@@ -1,12 +1,14 @@
 pipeline {
     agent {
-        docker{ image 'node:16-alpine' } 
-    }
-    stages {
-        stage ('test') {
-            steps {
-                sh 'node --version'
+        docker { image 'node:17-alpine' }
+          }
+          stages {
+            stage('Test') {
+                steps {
+                    sh 'node --version'
+                }
             }
-        }
-    }
+         
+          }
+        
 }
