--- a/python-jenkins-argocd-k8s/Jenkinsfile
+++ b/python-jenkins-argocd-k8s/Jenkinsfile
@@ -20,7 +20,10 @@ pipeline {
     }
 }
     post {
-        echo "pipeline success"
+        always {
+            echo "pipeline completed"
+        
     }
         
+}
 }
