--- a/python-jenkins-argocd-k8s/Jenkinsfile
+++ b/python-jenkins-argocd-k8s/Jenkinsfile
@@ -21,7 +21,7 @@ pipeline {
         stage ('Build docker') {
             steps {
                 echo 'Build docker image'
-                docker build -t gowri9493/cicd-e2e:$(BUILD_NUMBER) .
+                sh 'docker build -t gowri9493/cicd-e2e:$(BUILD_NUMBER) . '
             }
         }
 }
