--- a/python-jenkins-argocd-k8s/Jenkinsfile
+++ b/python-jenkins-argocd-k8s/Jenkinsfile
@@ -20,10 +20,10 @@ pipeline {
     }
         stage('Build Docker') {
             steps {
-                script {
+                 script {
                     sh '''
                     echo 'Build Docker Image'
-                    docker build -t gowri9493/cicd-e2e:${BUILD_NUMBER} .
+                    docker build -t abhishekf5/cicd-e2e:${BUILD_NUMBER} .
                     '''
                 }
             }
